# message-board

./: .gitignore  README.md  docker-compose.yml  messages.json
auth_server/: .dockerignore  Cargo.toml  Dockerfile  Readme.md  auth_config.toml
auth_server/src/: main.rs  schema.rs
auth_server/src/api/: middleware.rs  mod.rs
auth_server/src/config/: mod.rs
auth_server/src/crypto/: mod.rs
auth_server/src/mail/: mod.rs
auth_server/src/mongo/: mod.rs
auth_service/: Cargo.toml  Dockerfile  Readme.md  auth_config.toml
auth_service/src/: image_service.rs  main.rs  schema.rs
auth_service/src/api/: middleware.rs  mod.rs
auth_service/src/config/: mod.rs
auth_service/src/crypto/: mod.rs
back/: Dockerfile
back/src/: index.css
back/src/components/: BoardUser.js  Home.js  Login.js  Post.js
back/src/services/: auth.service.js  user.service.js
client/: Dockerfile  package-lock.json  package.json
client/faceflix/: package.json
client/faceflix/src/: App.js
client/faceflix/src/components/: BoardUser.js  Home.js  Login.js  Post.js  PostModal.js  PrivateRoute.js  Search.js
client/faceflix/src/components/userList/: CreateForm.js  UserList.js
client/faceflix/src/services/: auth.service.js  user.service.js
client/src/: App.js  index.js
client/src/components/: Home.js
client/src/components/userList/: CreateForm.js  UserList.js
client/src/services/: user.service.js
config/auth_server/: auth_config.toml
config/auth_service/: auth_config.toml
config/postfix/: init  main.cf
config/traefik/: certs.yml
content-service/: Dockerfile  auth.go  comments_api.go  config.go  go.mod  go.sum  main.go  middleware.go  mongo_api.go  posts_api.go  schema.go
image_resizer/: Dockerfile  go.mod  go.sum  main.go
image_resizer/misc/: client.py
image_service/: Dockerfile  go.mod  main.go
