[package]
name = "auth_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = { version = "0.10.0-rc.4", features = ["smtp-transport", "builder"] }
anyhow = "1.0.55"
toml = "0.5.8"
serde = {version = "1.0.136", features = ["derive"] }
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
actix-web = "4.0.1"
mongodb = "2.1.0"
sodiumoxide = "0.2.7"
tracing-actix-web = "0.5.0"
jsonwebtoken = "8.0.1"
thiserror = "1.0.30"
futures-util = "0.3.21"
actix-web-httpauth = "0.6.0-beta.8"
time = "0.3.7"
