[package]
name = "auth_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = { version = "0.10.0-rc.4", features = ["smtp-transport", "builder"] }
anyhow = "1.0.58"
toml = "0.5.9"
serde = {version = "1.0.137", features = ["derive"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
actix-web = "4.1.0"
mongodb = "2.2.2"
sodiumoxide = "0.2.7"
tracing-actix-web = "0.5.1"
jsonwebtoken = "8.1.1"
thiserror = "1.0.31"
futures-util = "0.3.21"
actix-web-httpauth = "0.6.0"
time = "0.3.11"
actix-cors = "0.6.1"
