[package]
name = "auth_server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
toml = "0.5.9"
serde = {version = "1.0.137", features = ["derive"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
actix-web = "4.1.0"
mongodb = "2.2.2"
sodiumoxide = "0.2.7"
tracing-actix-web = "0.6.0"
jsonwebtoken = "8.1.1"
futures-util = "0.3.21"
actix-web-httpauth = "0.6.0"
time = "0.3.11"
actix-cors = "0.6.1"
derivative = "2.2.0"
tracing-opentelemetry = "0.17.3"
opentelemetry = "0.17.0"
opentelemetry-jaeger = "0.16.0"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]